--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,10 +7,11 @@ phases:
       # Check AWS CLI version
       - aws --version
       # Log in to Amazon ECR
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 577158399875.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 333048779214.dkr.ecr.us-east-1.amazonaws.com
       # Define repository URI and image tag
-      - REPOSITORY_URI=577158399875.dkr.ecr.us-east-1.amazonaws.com/iitk-proj-awsdevops
+      - REPOSITORY_URI=333048779214.dkr.ecr.us-east-1.amazonaws.com/springboot-app
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
+
   build:
     commands:
       - echo Build started on date
@@ -21,6 +22,7 @@ phases:
       # Build and tag Docker image
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
+
   post_build:
     commands:
       - echo Build completed on date
@@ -32,7 +34,6 @@ phases:
       # Define container name and create imagedefinitions.json for ECS
       - DOCKER_CONTAINER_NAME=springboot-app
       - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      - echo $DOCKER_CONTAINER_NAME
       - echo Displaying imagedefinitions.json content
       - cat imagedefinitions.json
 
