--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,43 +1,38 @@
 version: 0.2
 
+env:
+  variables:
+    AWS_DEFAULT_REGION: us-east-1
+    REPOSITORY_URI: 687123200930.dkr.ecr.us-east-1.amazonaws.com/springboot-app
+    DOCKER_CONTAINER_NAME: springboot-app
+
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR....
-      # Check AWS CLI version
+      - echo Logging in to Amazon ECR...
       - aws --version
-      # Log in to Amazon ECR
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 333048779214.dkr.ecr.us-east-1.amazonaws.com
-      # Define repository URI and image tag
-      - REPOSITORY_URI=333048779214.dkr.ecr.us-east-1.amazonaws.com/springboot-app
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin 687123200930.dkr.ecr.us-east-1.amazonaws.com
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
 
   build:
     commands:
-      - echo Build started on date
+      - echo Build started on `date`
       - echo Building the JAR file...
-      # Build the Java project using Maven
       - mvn clean install
-      - echo Building the Docker image...
-      # Build and tag Docker image
+      - echo Building Docker image...
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
 
   post_build:
     commands:
-      - echo Build completed on date
-      - echo Pushing the Docker image to ECR...
-      # Push Docker images to ECR
+      - echo Build completed on `date`
+      - echo Pushing Docker images to ECR...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Writing image definitions file...
-      # Define container name and create imagedefinitions.json for ECS
-      - DOCKER_CONTAINER_NAME=springboot-app
+      - echo Creating imagedefinitions.json...
       - printf '[{"name":"%s","imageUri":"%s"}]' $DOCKER_CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
-      - echo Displaying imagedefinitions.json content
       - cat imagedefinitions.json
 
 artifacts:
   files:
     - imagedefinitions.json
-    - target/springboot-aws-deploy.jar
